--- a/styles/style.css
+++ b/styles/style.css
@@ -16,14 +16,16 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 0% 10% 0% 2%;
+    margin: 0% 5% 0% 2%;
     padding: 10px 20px;
     color: white;
 }
 
 #logo {
     max-width: 300px;
+    height: 200px;
 }
+
 
 #about-us {
     display: flex;
@@ -48,8 +50,8 @@ h1 {
 }
 
 .container {
-    max-width: 800px;
-    margin: 20px auto;
+    max-width: 1000px;
+    margin: 15px auto;
     display: flex;
     justify-content: center;
 }
@@ -65,7 +67,7 @@ h1 {
     padding: 10px 20px;
     border: none;
     border-radius: 5px;
-    background-color: #0c56de;
+    background-color: #ff4d00;
     color: white;
     cursor: pointer;
     margin-left: 10px;
@@ -73,6 +75,14 @@ h1 {
 
 #search-button:hover {
     background-color: #0c56de;
+}
+
+p {
+    font-family: 'Georgia', serif;
+    color: #333;
+    line-height: 1.6;
+    margin: 15px 0;
+    font-size: 1.1em;
 }
 
 #recipes-container {
@@ -114,7 +124,7 @@ footer {
     padding: 10px 20px;
     border: none;
     border-radius: 5px;
-    background-color: #6c63ff;
+    background-color: #ff6600;
     color: white;
     cursor: pointer;
     transition: background-color 0.3s;
@@ -131,6 +141,14 @@ a {
     transition: color 0.3s, background-color 0.3s;
 }
 
+.recipe-column {
+    background-color: white;
+    border-radius: 10px;
+    padding: 15px;
+    margin: 1%;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+    width: 50%;
+}
 
 /* Form style */
 form a {
